2008-03-24  Nathan Sidwell  <nathan@codesourcery.com>

	* gthr-vxworks.h (UNUSED): Define.

2008-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.h (STATIC_CHAIN_REGNUM): Use R10_REG and
	CX_REG.

2008-03-23  Zuxy Meng <zuxy.meng@gmail.com>

	* doc/extend.texi (Function Attributes): Add missing comma in the
	example of the "alloc_size" attribute.
	
2008-03-23  Uros Bizjak  <ubizjak@gmail.com>

	Revert:
	2008-03-05  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386-modes.def: Use 4 byte alignment on DI for
	32bit host.

	2008-03-19  Uros Bizjak  <ubizjak@gmail.com>

	PR target/35496
	* stor-layout.c (update_alignment_for_field): Set minimum alignment
	of the underlying type of a MS bitfield layout to the natural
	alignment of the type.

	2008-03-22  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (assign_386_stack_local): Align DImode slots
	to their natural alignment to avoid store forwarding stalls.

2008-03-22  Richard Guenther  <rguenther@suse.de>

	* tree-cfg.c (verify_expr): Recurse again for invariant addresses.
	For PHI nodes verify the address is invariant.
	* tree-ssa-ccp.c (ccp_decl_initial_min_invariant): Remove.
	(get_symbol_constant_value): Use is_gimple_min_invariant.
	(maybe_fold_stmt_indirect): Likewise.

2008-03-22  Richard Sandiford  <rsandifo@nildram.co.uk>

	PR rtl-optimization/33927
	* Makefile.in (dse.o): Depend on $(TM_P_H).
	* expr.h (extract_low_bits): Declare.
	* expmed.c (extract_low_bits): New function.
	* rtlhooks.c (gen_lowpart_general): Generalize SUBREG handling.
	* dse.c: Include tm_p.h.
	(find_shift_sequence): Remove the read_reg argument and return the
	read value.  Emit the instructions instead of returning them.
	Iterate on new_mode rather than calculating it each time.
	Check MODES_TIEABLE_P.  Use simplify_gen_subreg to convert the
	source to NEW_MODE and extract_low_bits to convert the shifted
	value to READ_MODE.
	(replace_read): Allow the load and store to have different mode