@@ -1,3 +1,8 @@
+2008-03-24  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
+
+	* diagnostic.c (diagnostic_count_diagnostic): Delete.
+	(diagnostic_report_diagnostic): Update. Handle ICEs here.
+	
 2008-03-24  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* gthr-vxworks.h (UNUSED): Define.
